[gd_scene load_steps=15 format=2]

[ext_resource path="res://menu/menu.gd" type="Script" id=1]
[ext_resource path="res://assets/other/menu.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/prstartk.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/music/menu.mp3" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=3]
resource_name = "move"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpacebarRichTextLabel:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 60 ), Vector2( 0, 55 ), Vector2( 0, 60 ), Vector2( 0, 65 ), Vector2( 0, 60 ) ]
}

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="DynamicFont" id=6]
size = 8
extra_spacing_top = 2
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="DynamicFont" id=9]
size = 8
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=10]
size = 8
font_data = ExtResource( 3 )

[node name="Menu" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
offset = Vector2( 160, 90 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )
limit_left = 0
limit_top = 0

[node name="TitleLabel" type="RichTextLabel" parent="."]
margin_top = 15.0
margin_right = 320.0
margin_bottom = 35.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]Don't get pet[/center]"
text = "Don't get pet"
scroll_active = false

[node name="SpacebarRichTextLabel" type="RichTextLabel" parent="."]
margin_top = 61.7175
margin_right = 320.0
margin_bottom = 72.7241
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Press Spacebar[/center]"
text = "Press Spacebar"
scroll_active = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "move"
anims/move = SubResource( 3 )

[node name="QRichTextLabel" type="RichTextLabel" parent="."]
margin_left = 298.0
margin_top = 157.0
margin_right = 315.0
margin_bottom = 174.0
custom_fonts/normal_font = SubResource( 4 )
text = "?"
scroll_active = false

[node name="QButton" type="Button" parent="."]
margin_left = 292.0
margin_top = 150.0
margin_right = 319.0
margin_bottom = 178.0
custom_styles/focus = SubResource( 5 )
flat = true

[node name="BGColorRect" type="ColorRect" parent="."]
visible = false
margin_right = 320.0
margin_bottom = 180.0
color = Color( 0, 0, 0, 0.745098 )

[node name="FGColorRect" type="ColorRect" parent="."]
visible = false
margin_left = 40.0
margin_top = 30.0
margin_right = 280.0
margin_bottom = 150.0
color = Color( 0.0745098, 0.0431373, 0.172549, 0.968627 )

[node name="CreditsRichTextLabel" type="RichTextLabel" parent="FGColorRect"]
margin_left = 40.0
margin_top = 95.0
margin_right = 269.0
margin_bottom = 122.0
rect_scale = Vector2( 0.7, 0.7 )
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
bbcode_text = "[center]victor_bx - programming/art
midtuna - music/sfx
[/center]"
text = "victor_bx - programming/art
midtuna - music/sfx
"
scroll_active = false

[node name="XRichTextLabel" type="RichTextLabel" parent="FGColorRect"]
margin_left = 218.0
margin_top = 1.0
margin_right = 235.0
margin_bottom = 19.0
custom_fonts/normal_font = SubResource( 7 )
text = "x"
scroll_active = false

[node name="XButton" type="Button" parent="FGColorRect"]
margin_left = 214.0
margin_top = 1.0
margin_right = 236.0
margin_bottom = 21.0
custom_styles/focus = SubResource( 8 )
flat = true

[node name="MusicHSlider" type="HSlider" parent="FGColorRect"]
margin_left = 99.0
margin_top = 32.0
margin_right = 313.0
margin_bottom = 48.0
rect_scale = Vector2( 0.5, 0.5 )
max_value = 1.0
step = 0.05

[node name="MusicRichTextLabel" type="RichTextLabel" parent="FGColorRect"]
margin_left = 43.0
margin_top = 30.0
margin_right = 83.0
margin_bottom = 40.0
custom_fonts/normal_font = SubResource( 9 )
text = "Music"
scroll_active = false

[node name="SFXHSlider" type="HSlider" parent="FGColorRect"]
margin_left = 99.0
margin_top = 55.0
margin_right = 313.0
margin_bottom = 71.0
rect_scale = Vector2( 0.5, 0.5 )
max_value = 1.0
step = 0.05

[node name="SFXRichTextLabel" type="RichTextLabel" parent="FGColorRect"]
margin_left = 43.0
margin_top = 54.0
margin_right = 69.0
margin_bottom = 64.0
custom_fonts/normal_font = SubResource( 10 )
text = "SFX"
scroll_active = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true
bus = "Music"

[connection signal="value_changed" from="FGColorRect/MusicHSlider" to="." method="_on_MusicHSlider_value_changed"]
[connection signal="value_changed" from="FGColorRect/SFXHSlider" to="." method="_on_SFXHSlider_value_changed"]
